# AdvertEaseTool

./: CMakeLists.txt  README.html  README.md  README_CN.html  README_CN.md
cli/: CMakeLists.txt
cli/include/: args_parsing.h  main.h
cli/src/: args_parsing.cpp  main.cpp
common/: CMakeLists.txt
common/include/: onnx_decision_model.h  onnx_mark_model.h
common/src/: onnx_decision_model.cpp  onnx_mark_model.cpp
gui/: CMakeLists.txt  CMakeLists_clion.txt  logo.rc
gui/include/: add_device.h  device_control.h  get_devices.h  mainwidget.h  mainwindow.h  run.h  utils.h
gui/resource/: resource.qrc  theme.qss
gui/src/: add_device.cpp  device_control.cpp  get_devices.cpp  main.cpp  mainwidget.cpp  mainwindow.cpp  run.cpp  utils.cpp
gui/ui/: mainwindow.ui
